# _python

./: README.md  pyproject.toml
0516/: main.py  pyproject.toml  test.ipynb  text.py
0523/: leasson.py  leasson3.ipynb
0530/: lesson.ipynb  main.py  pyproject.toml  考試分數.xlsx
0606/: YouBike即時資料.xlsx  lesson1.ipynb  lesson1.py  lesson2.py  lesson3.py  lesson5.py
0613/: lesson1.ipynb  lesson1.py  lesson2.py  lesson3.ipynb
0627/: cos_subplot.py  lesson.ipynb  lesson.md  lesson2.ipynb  lesson2.md  lesson2.py  lesson3.ipynb  lesson3.md  lesson3.py  lesson4.ipynb  pie_chart_app.py  population_app.py  wave_plotter.py
