[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "0523",
    "0530",
]
